[package]
name = "repellet"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">4.0.18", features = ["derive", "color"] }
reedline = { version = "0.14.0", features = ["external_printer"] }
thiserror = "1.0.38"


[[example]]
name = "simple"

[dev-dependencies]
simplelog = "0.12.0"
